# drones

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  rosdep.yaml
.github/workflows/: ci.yml
docker/: Dockerfile.jetson  docker-compose.yml  entrypoint.sh
docs/: api_reference.md  architecture.md  deployment.md
maps/: test_corridor.yaml
scripts/: export_tensorrt.py  health_check.py
src/antigravity_bringup/: CMakeLists.txt  package.xml
src/antigravity_bringup/config/: cognition.yaml  control.yaml  detection.yaml  diagnostics.yaml  ekf.yaml  localization.yaml  mission.yaml  perception.yaml  planning.yaml  safety.yaml  slam.yaml
src/antigravity_bringup/launch/: full_stack.launch.py  hardware.launch.py  simulation.launch.py
src/antigravity_bringup/rviz/: antigravity.rviz
src/antigravity_bringup/urdf/: antigravity_drone.urdf
src/antigravity_bringup/worlds/: indoor_corridor.world
src/antigravity_cognition/: package.xml  setup.cfg  setup.py
src/antigravity_cognition/antigravity_cognition/: __init__.py  octomap_world_model_node.py  prediction_engine_node.py  semantic_segmentation_node.py
src/antigravity_control/: package.xml  setup.cfg  setup.py
src/antigravity_control/antigravity_control/: __init__.py  ekf_state_estimator_node.py  px4_bridge_node.py  trajectory_optimizer_node.py
src/antigravity_detection/: package.xml  setup.cfg  setup.py
src/antigravity_detection/antigravity_detection/: __init__.py  yolo_detection_node.py
src/antigravity_interfaces/: CMakeLists.txt  package.xml
src/antigravity_interfaces/action/: NavigateToGoal.action
src/antigravity_interfaces/msg/: Detection.msg  DetectionArray.msg  EKFState.msg  GeofenceStatus.msg  LocalizationState.msg  ParticleCloud.msg  PredictedTrajectory.msg  RLAction.msg  SafetyStatus.msg  SemanticLabel.msg  SemanticMap.msg  SystemHealth.msg  TrackedObject.msg  TrackedObjectArray.msg  Trajectory.msg  TrajectoryPoint.msg  WaypointPath.msg
src/antigravity_interfaces/srv/: GetLocalization.srv  LoadMap.srv  SafetyOverride.srv  SetGoal.srv
src/antigravity_localization/: package.xml  setup.cfg  setup.py
src/antigravity_localization/antigravity_localization/: __init__.py  mcl_node.py
src/antigravity_mapping/: package.xml  setup.cfg  setup.py
src/antigravity_mapping/antigravity_mapping/: __init__.py  map_server_node.py
src/antigravity_perception/: package.xml  setup.cfg  setup.py
src/antigravity_perception/antigravity_perception/: __init__.py  camera_node.py  imu_node.py  sensor_diagnostics_node.py  sensor_sync_node.py
src/antigravity_planning/: package.xml  setup.cfg  setup.py
src/antigravity_planning/antigravity_planning/: __init__.py  global_planner_node.py  local_planner_node.py  mission_manager_node.py  rl_decision_node.py
src/antigravity_safety/: package.xml  setup.cfg  setup.py
src/antigravity_safety/antigravity_safety/: __init__.py  geofence_node.py  safety_arbiter_node.py  system_monitor_node.py
src/antigravity_slam/: package.xml  setup.cfg  setup.py
src/antigravity_slam/antigravity_slam/: __init__.py  orb_slam3_node.py
tests/benchmarks/: benchmark_pipeline.py
tests/sitl/: test_e2e_navigation.py
tests/unit/: conftest.py  test_ekf.py  test_global_planner.py  test_mcl.py  test_mission_manager.py  test_prediction.py  test_rl_decision.py  test_safety_arbiter.py  test_sensor_diagnostics.py  test_trajectory.py
training/: drone_nav_env.py  train_ppo.py
