<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antigravity_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and system configuration for ANTIGRAVITY drone navigation</description>
  <maintainer email="dev@antigravity.ai">ANTIGRAVITY Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>antigravity_interfaces</exec_depend>
  <exec_depend>antigravity_perception</exec_depend>
  <exec_depend>antigravity_slam</exec_depend>
  <exec_depend>antigravity_detection</exec_depend>
  <exec_depend>antigravity_mapping</exec_depend>
  <exec_depend>antigravity_localization</exec_depend>
  <exec_depend>antigravity_cognition</exec_depend>
  <exec_depend>antigravity_control</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
