<?xml version="1.0"?>
<package format="3">
  <name>antigravity_detection</name>
  <version>1.0.0</version>
  <description>YOLOv8 object detection with TensorRT optimization for drone navigation</description>
  <maintainer email="dev@antigravity.ai">ANTIGRAVITY Dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>antigravity_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
