<?xml version="1.0"?>
<package format="3">
  <name>antigravity_mapping</name>
  <version>1.0.0</version>
  <description>Map server for loading and serving pre-built occupancy grid and OctoMap maps</description>
  <maintainer email="dev@antigravity.ai">ANTIGRAVITY Dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>antigravity_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
