<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antigravity_perception</name>
  <version>1.0.0</version>
  <description>Camera and IMU driver integration for ANTIGRAVITY drone navigation.
  Provides synchronized camera+IMU data streams for SLAM and detection pipelines.</description>
  <maintainer email="dev@antigravity.ai">ANTIGRAVITY Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>antigravity_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
