<?xml version="1.0"?>
<package format="3">
  <name>antigravity_safety</name>
  <version>1.0.0</version>
  <description>Safety arbiter and geofence enforcement for ANTIGRAVITY autonomous drone</description>
  <maintainer email="dev@antigravity.ai">ANTIGRAVITY Dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>antigravity_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
