<?xml version="1.0"?>
<package format="3">
  <name>antigravity_slam</name>
  <version>1.0.0</version>
  <description>ORB-SLAM3 / VINS-Mono integration for visual-inertial SLAM</description>
  <maintainer email="dev@antigravity.ai">ANTIGRAVITY Dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>antigravity_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
